Modal overflow problem resolved

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@
 }
 
 .layout {
-  max-width: 90%;
+  max-width: 80%;
   margin: 0 auto;
 }
 
@@ -41,8 +41,7 @@
 
 .country-name {
   font-size: 20px;
-  background-color: rgb(190, 187, 181);
-  max-width: 200px;
+  background-color: rgb(194, 194, 194);
   text-align: center;
 }
 
@@ -57,20 +56,14 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(10px);
 }
 
 .modal {
   position: absolute;
-  z-index: 2;
-  top: 30%;
+  z-index: 3;
+  top: 40%;
   left: 50%;
   bottom: 50%;
   transform: translate(-50%, -50%);
-}
-
-.blur {
-  background: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(20px);
 }
